#18 implemented pretty summary

--- a/flaskinventory/templates/add/newsource.html
+++ b/flaskinventory/templates/add/newsource.html
@@ -644,63 +644,67 @@
                 <h4 class="mb-1">
                     Value
                 </h4>
+                <div class="mt-2 row">
+                    <div class="col-1" id='summary-publication_cycle_weekday_1' hidden>
+                    <h6 class="mb-1">
+                        Monday
+                    </h6>
+                    <h4 class="mb-1" hidden>
+                        Value
+                    </h4>
+                    </div>
+                    <div class="col-1" id='summary-publication_cycle_weekday_2' hidden>
+                        <h5 class="mb-1">
+                            Tuesday
+                        </h5>
+                        <h4 class="mb-1" hidden>
+                            Value
+                        </h4>
+                    </div>
+                    <div class="col-1" id='summary-publication_cycle_weekday_3' hidden>
+                        <h5 class="mb-1">
+                            Wednesday
+                        </h5>
+                        <h4 class="mb-1" hidden>
+                            Value
+                        </h4>
+                    </div>
+                    <div class="col-1" id='summary-publication_cycle_weekday_4' hidden>
+                        <h5 class="mb-1">
+                            Thursday
+                        </h5>
+                        <h4 class="mb-1" hidden>
+                            Value
+                        </h4>
+                    </div>
+                    <div class="col-1" id='summary-publication_cycle_weekday_5' hidden>
+                        <h5 class="mb-1">
+                            Friday
+                        </h5>
+                        <h4 class="mb-1" hidden>
+                            Value
+                        </h4>
+                    </div>
+                    <div class="col-1" id='summary-publication_cycle_weekday_6' hidden>
+                        <h5 class="mb-1">
+                            Saturday
+                        </h5>
+                        <h4 class="mb-1" hidden>
+                            Value
+                        </h4>
+                    </div>
+                    <div class="col-1" id='summary-publication_cycle_weekday_7' hidden>
+                        <h5 class="mb-1">
+                            Sunday
+                        </h5>
+                        <h4 class="mb-1" hidden>
+                            Value
+                        </h4>
+                    </div>
+                </div>
+
             </div>
-            <div id='summary-publication_cycle_weekday_1' hidden>
-                <h6 class="text-muted mb-1">
-                    Monday
-                </h6>
-                <h4 class="mb-1">
-                    Value
-                </h4>
-            </div>
-            <div id='summary-publication_cycle_weekday_2' hidden>
-                <h6 class="text-muted mb-1">
-                    Tuesday
-                </h6>
-                <h4 class="mb-1">
-                    Value
-                </h4>
-            </div>
-            <div id='summary-publication_cycle_weekday_3' hidden>
-                <h6 class="text-muted mb-1">
-                    Wednesday
-                </h6>
-                <h4 class="mb-1">
-                    Value
-                </h4>
-            </div>
-            <div id='summary-publication_cycle_weekday_4' hidden>
-                <h6 class="text-muted mb-1">
-                    Thursday
-                </h6>
-                <h4 class="mb-1">
-                    Value
-                </h4>
-            </div>
-            <div id='summary-publication_cycle_weekday_5' hidden>
-                <h6 class="text-muted mb-1">
-                    Friday
-                </h6>
-                <h4 class="mb-1">
-                    Value
-                </h4>
-            </div>
-            <div id='summary-publication_cycle_weekday_6' hidden>
-                <h6 class="text-muted mb-1">
-                    Saturday
-                </h6>
-                <h4 class="mb-1">
-                    Value
-                </h4>
-            </div>
-            <div id='summary-publication_cycle_weekday_7' hidden>
-                <h6 class="text-muted mb-1">
-                    Sunday
-                </h6>
-                <h4 class="mb-1">
-                    Value
-                </h4>
-            </div>
+            
             <div class="mb-3"></div>
             <div id='summary-geographic_scope' hidden>
                 <h6 class="text-muted mb-1">
