#21 added to summary screen

--- a/flaskinventory/templates/add/newsource.html
+++ b/flaskinventory/templates/add/newsource.html
@@ -788,6 +788,14 @@
                     Value
                 </h4>
             </div>
+            <div id='summary-audience_size_followers' hidden>
+                <h6 class="text-muted mb-1">
+                    How many likes does the Facebook page have? 
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
             <div id='summary-audience_size_subscribers' hidden>
                 <h6 class="text-muted mb-1">
                     How many copies of this newspaper are sold per issue? 
