--- a/flaskinventory/templates/edit/editform.html
+++ b/flaskinventory/templates/edit/editform.html
@@ -65,8 +65,8 @@ var TomSelectPublishesConfig = {
                     }
                 };
                 var country_label = ' '
-                if ("geographic_scope_countries" in data) {
-                    country_label = '<small class="text-muted mx-1"> (' + escape(data.geographic_scope_countries[0].name) + ')</small>'
+                if ("country" in data) {
+                    country_label = '<small class="text-muted mx-1"> (' + escape(data.country[0].name) + ')</small>'
                 }
                 return '<div>' +
                         '<span class="title">' + escape(data.name) + channel_label + '</span> ' +
@@ -81,8 +81,8 @@ var TomSelectPublishesConfig = {
                     }
                 };
                 var country_label = ' '
-                if ("geographic_scope_countries" in data) {
-                    country_label = '<small class="text-muted mx-1"> (' + escape(data.geographic_scope_countries[0].name) + ')</small>'
+                if ("country" in data) {
+                    country_label = '<small class="text-muted mx-1"> (' + escape(data.country[0].name) + ')</small>'
                 }
                 return '<div>' + escape(data.name) + channel_label + country_label + '</div>';
             }
@@ -177,8 +177,8 @@ var TomSelectRelatedSourcesConfig = {
                 }
             };
             var country_label = ' '
-            if ("geographic_scope_countries" in data) {
-                country_label = '<small class="text-muted mx-1"> (' + escape(data.geographic_scope_countries[0].name) + ')</small>'
+            if ("country" in data) {
+                country_label = '<small class="text-muted mx-1"> (' + escape(data.country[0].name) + ')</small>'
             }
             return '<div>' +
                     '<span class="title">' + escape(data.name) + channel_label + '</span> ' +
@@ -193,8 +193,8 @@ var TomSelectRelatedSourcesConfig = {
                 }
             };
             var country_label = ' '
-            if ("geographic_scope_countries" in data) {
-                country_label = '<small class="text-muted mx-1"> (' + escape(data.geographic_scope_countries[0].name) + ')</small>'
+            if ("country" in data) {
+                country_label = '<small class="text-muted mx-1"> (' + escape(data.country[0].name) + ')</small>'
             }
             return '<div>' + escape(data.name) + channel_label + country_label + '</div>';
         }
@@ -204,7 +204,7 @@ new TomSelect(relatedSelector, TomSelectRelatedSourcesConfig);
 
 {% endif %}
 
-{% if 'geographic_scope_countries' in fields %}
+{% if 'country' in fields %}
 
 var TomSelectCountriesConfig = {
     plugins: ['remove_button'],
@@ -215,7 +215,7 @@ var TomSelectCountriesConfig = {
     }
 };
 
-new TomSelect('#geographic_scope_countries', TomSelectCountriesConfig);
+new TomSelect('#country', TomSelectCountriesConfig);
 
 {% endif %}
 
