--- a/flaskinventory/templates/view/elements/detail_source.html
+++ b/flaskinventory/templates/view/elements/detail_source.html
@@ -147,7 +147,7 @@
         <dd class="col-sm-9">{{ entry.geographic_scope }}
         <dt class="col-sm-3">Countries</dt>
         <dd class="col-sm-9">
-            {% for country in entry.geographic_scope_countries %}
+            {% for country in entry.country %}
             <a href="{{ url_for('view.view_country', unique_name=country.unique_name) }}">{{ country.name }}</a> 
             {% endfor %}
         </dd>
