#27 added paragraph about audience size

--- a/flaskinventory/templates/guides/newsource.html
+++ b/flaskinventory/templates/guides/newsource.html
@@ -89,4 +89,14 @@
         (e.g., a private account sharing links to articles from a newspaper)</li>
 </ul>
 
+<h2>List of credible resources</h2>
+
+<p>We provide a curated and growing list of resources that we found useful for adding entries to the inventory.</p>
+
+<h3>Audience Size for Print Newspapers</h3>
+
+<p>Getting detailed information about the reach of a printed news source can be challenging. However, there are interest groups that collect such data and sometimes make it available for public.</p>
+<p>Visit the <a href="https://www.ifabc.org/members/full-member-list-alphabetically" target="_blank">International Federation of Audit Bureaux of Circulations</a> to find an appropriate source for many European countries. 
+    E.g., for Austria the <a href="https://www.oeak.at/auflagedetails/" target="_blank">OEAK</a> or Germany the <a href="https://www.ivw.eu/print/print" target="_blank">IVW</a>.</p>
+
 {% endblock content %}
