#27 updated not included list

--- a/flaskinventory/templates/guides/newsource.html
+++ b/flaskinventory/templates/guides/newsource.html
@@ -87,6 +87,7 @@
     </li>
     <li> Social media accounts only sharing news that were created by others
         (e.g., a private account sharing links to articles from a newspaper)</li>
+        <li>Collective political actors (e.g., parties, governments) and (political) advertisement/public relations</li>
 </ul>
 
 <h2>List of credible resources</h2>
